# groupme_wrapped

./: .gitignore  README.md  pyproject.toml
docs/: config_example.json
py/: groupme_wrapped.py
py/data_processing/: analysis.py  plots.py  tables.py
py/groupme_api/: fetch_chat.py  request_utils.py
py/models/: analysis_config.py  chat_stats.py  member_stats.py  message_superlative.py  message_template.py
py/utils/: directories.py  logger.py  utility.py
