[tool.poetry]
name = "groupme-wrapped"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "py"}]

[tool.poetry.dependencies]
python = "^3.12"

typer = "0.15"
requests = "^2.25.1"
urllib3 = "^2.3.0"
types-requests = "^2.32.0"
pydantic = "^2.10.4"
matplotlib = "^3.9.0"
pandas = "^2.2.0"
pandas-stubs="^1.2.0.1"
numpy = "^2.1.0"
seaborn="^0.13.2"

pylint = "^3.2.7"
ruff = "^0.7.1"
pyright = "^1.1.380"
black = "^22.1.0"
mypy = "^1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
